[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/LevelSelector.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]

flags = 4
gradient = SubResource( 1 )
width = 2048

[node name="LevelSelector" type="Container" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 373.0
margin_top = 197.0
margin_right = 405.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="Background" type="TextureRect" parent="." index="0"]

modulate = Color( 0.761322, 1, 0.613281, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -373.0
margin_top = -197.0
margin_right = 303.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 2 )
expand = true
stretch_mode = 7
_sections_unfolded = [ "Visibility" ]

[node name="RichTextLabel5" type="RichTextLabel" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -92.0
margin_top = -172.0
margin_right = 69.0
margin_bottom = -118.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Level Selector"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "Visibility" ]

[node name="MainMenuButton" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 75.0
margin_top = 59.0
margin_right = 235.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="Level0Button" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -341.0
margin_top = -165.0
margin_right = -259.0
margin_bottom = -133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Prototype0"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="Level1Button" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -341.0
margin_top = -101.0
margin_right = -280.0
margin_bottom = -69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 1"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="Level2Button" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -245.0
margin_top = -101.0
margin_right = -184.0
margin_bottom = -69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Level 2"
flat = false
align = 1
_sections_unfolded = [ "Textures" ]

[node name="OptionsButton" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 139.0
margin_top = -165.0
margin_right = 236.0
margin_bottom = -133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options (wip)"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "Textures" ]

[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[connection signal="pressed" from="Level0Button" to="." method="_on_Level0Button_pressed"]

[connection signal="pressed" from="Level1Button" to="." method="_on_Level1Button_pressed"]

[connection signal="pressed" from="Level2Button" to="." method="_on_Level2Button_pressed"]

[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]


